# TriangularMatrix

./: .cproject  .gitignore  .project  CMakeLists.txt  LowerTriangularMatrix.cpp  README.md  TriangularMatrix.cpp  TriangularMatrixEnum.cpp  TriangularMatrixEnum.h  UpperTriangularMatrix.cpp  UpperTriangularMatrix.h  test.cpp
Lib/Include/: libTriangularMatrix.h
Lib32/: libTriangularMatrix.so.1.0.1
Lib32/Include/header/: TriangularMatrix.h
Lib64/: libTriangularMatrix.so.1.0.1
src/: LowerTriangularMatrix.cpp  TriangularMatrix.cpp  UpperTriangularMatrix.cpp  libTriangularMatrix.h
src/Common/: TriangularMatrixEnv.h
src/header/: LowerTriangularMatrix.h  TriangularMatrix.h
